# Uroboros

./: .env.example  .gitignore  JUDGE_COUNCIL.md  README.md  STANDARDS_MAPPING.md  pyproject.toml
.github/workflows/: test.yml
examples/: judge_council_example.py
huggingface_space/: README.md  app.py  requirements.txt
scripts/: health_check.py
tests/: test_judge.py  test_judge_council.py  test_phases_6_9.py
uroboros/: __init__.py  cli.py  config.py  evolution_pipeline.py  pipeline.py
uroboros/agents/: adaptive_red_team.py  adversarial_council.py  blue_team.py  drift_agent.py  judge_council.py
uroboros/attacks/: __init__.py  hallucination.py  jailbreakbench.py  pii_leak.py  prompt_injection.py  semantic_drift.py
uroboros/core/: judge.py  schema.py
uroboros/reports/: __init__.py  remediation.py
